src/z80asm/z80asm2/t/45-symbols/expected/local_label_06.txt
% z88dk-z80asm -v -dump-after-symbol-collection t/45-symbols//input/local_label_06.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
Assembling t/45-symbols/input/local_label_06.asm...
t/45-symbols/input/local_label_06.asm:2:1: error: Local label cannot have a parent label: g2@l2
    g2@l2:          ; error
    ^
Assembly completed with 1 error
